# BMSTU_Learning

./: .gitignore  README.md
1_semester/Algorithms/: fibo_near.c  fibo_num.c  toBinary.c
1_semester/Algorithms/1 module/: concat.c  fibsys.c  maxarray.c  maxk.c  peak.c  permut.c  primediv.c  revarray.c  saddlepoint.c  superstr.c
1_semester/Algorithms/2 module/: bubblesort.c  csort.c  datesort1.c  datesort2.c  dsort.c  hsort.c  kmpall.c  mergesort.c  power2.c  prefixes.c  pword.c  quicksort.c  radixsort.c  shellsort.c
1_semester/Algorithms/3 module/: circbuf.c  cluster.c  listbsort.c  listisort.c  merge.c  qmax.c  qsstack.c  stackmachine.c  zeroxor.c
1_semester/Computer_Science/: sort.rkt  stream.rkt  trace.rkt  unit-testing.rkt
1_semester/Computer_Science/hw/: hw1.bak  hw1.rkt  hw2.bak  hw2.rkt  hw3.bak  hw3.rkt
1_semester/Computer_Science/labs/: ex.rkt  lab1.rkt  lab2.bak  lab2.rkt  lab3.bak  lab3.rkt  lab4.bak  lab4.rkt  lab5.bak  lab5.rkt  lab6.bak  lab6.rkt
1_semester/Computer_Science/reports/: ib-lab1-report.md  ib-lab2-report.md  ib-lab3-report.md  ib-lab5-report.md  ib-lab7-report.md
1_semester/Computer_Science/РК3/: Python_summary.md
1_semester/English/: Инструкция для студентов.docx
1_semester/Социология/: Эмиль Дюркгейм.docx
1_semester/Социология/Исследование_Анонимность/: Анализ интервью.docx  Гайд интервью.doc  Гайд интервью_анонимность.docx  Интервью_1.txt  Интервью_2.txt  Интервью_3.txt
2_semester/DM/1 module/: add.go  (+5 more)
2_semester/English/: iot_pres_text.txt
2_semester/PLaM/OpenCV/hw2/Markers detection/: CMakeLists.txt  main.cpp
(+172 files in other folders)
